--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 addopts = 
-    --cov=app --cov-branch --cov-fail-under=90 
+    --cov=app --cov=api --cov-branch --cov-fail-under=90 
     --cov-report=term-missing:skip-covered --cov-report=html:coverage 
