--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ flake8==3.8.4
 gunicorn==20.0.4
 ipython==7.19.0
 isort==5.6.4
+orjson==3.4.3
 psycopg2-binary==2.8.6
 pydantic==1.7.2
 pytest==6.1.2
