--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ psycopg2-binary==2.8.6
 pydantic==1.7.2
 pytest==6.1.2
 pytest-cov==2.10.1
+requests==2.25.0
 SQLAlchemy==1.3.20
 starlette==0.14.1
 uvicorn==0.12.2
