debian-up.sh -- to get a debian server up and running

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       SITE_HOST: ${SITE_HOST}
+      SITE_NAME: ${SITE_NAME}
     ports:
       - "8000:8000"
     volumes:
