--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ black==20.8b1
 databases==0.4.1
 flake8==3.8.4
 gunicorn==20.0.4
+httptools==0.1.1
 ipython==7.19.0
 isort==5.6.4
 Jinja2==2.11.2
@@ -20,3 +21,4 @@ requests==2.25.0
 SQLAlchemy==1.3.20
 starlette==0.14.1
 uvicorn==0.12.2
+uvloop==0.14.0
