+ ./deploy.sh - to redeploy the application + use the git short sha as the docker image $TAGNAME during deployment + use $STACK_NAME as the name of the stack

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,10 +1,10 @@
 version: "3.7"
 services:
   router:
-    image: urlly_router:latest
+    image: urlly_router:$TAGNAME
 
   app:
-    image: urlly_app:latest
+    image: urlly_app:$TAGNAME
     command: ["gunicorn", "-w", "2", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--log-level", "debug", "app.main:app"]
     volumes: []
 
