--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -8,5 +8,22 @@ services:
     command: ["gunicorn", "-w", "2", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--log-level", "debug", "app.main:app"]
     volumes: []
 
+  logspout:
+    image: gliderlabs/logspout
+    networks:
+      - logging
+    volumes:
+      - /etc/hostname:/etc/host_hostname:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      SYSLOG_STRUCTURED_DATA: "${LOGGLY_CUSTOMER_TOKEN}@41058"
+      tag: "${STACK_NAME}"
+    command: syslog+tcp://logs-01.loggly.com:514
+    deploy:
+      mode: global
+
+networks:
+  logging:
+
 volumes:
   pgdata:
