--- a/router/templates/default.conf.template
+++ b/router/templates/default.conf.template
@@ -10,6 +10,13 @@
 # limit each remote IP to 2 req/sec
 limit_req_zone $binary_remote_addr zone=home:10m rate=2r/s;
 
+# append to common format: request_time, upstream_response_time 
+log_format router_access_log '$remote_addr - $remote_user [$time_local] '
+                                '"$request" $status $body_bytes_sent '
+                                '"$http_referer" "$http_user_agent" '
+                                'request_time:$request_time '
+                                'upstream_response_time:$upstream_response_time';
+
 server {
     listen 80 default_server;
     # listen       443 ssl;
@@ -21,7 +28,7 @@ server {
 
     charset utf-8;
     error_log /dev/stderr debug;
-    access_log /dev/stdout;
+    access_log /dev/stdout router_access_log;
 
     location / {
         limit_req zone=home;
