--- a/router/templates/default.conf.template
+++ b/router/templates/default.conf.template
@@ -14,8 +14,8 @@ limit_req_zone $binary_remote_addr zone=home:10m rate=2r/s;
 log_format router_access_log '$remote_addr - $remote_user [$time_local] '
                                 '"$request" $status $body_bytes_sent '
                                 '"$http_referer" "$http_user_agent" '
-                                'request_time:$request_time '
-                                'upstream_response_time:$upstream_response_time';
+                                'request_time=$request_time '
+                                'upstream_response_time=$upstream_response_time';
 
 server {
     listen 80 default_server;
