--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   router:
     build: router
-    depends_on: 
+    depends_on:
       - app
     ports:
       - "80:80"
@@ -12,20 +12,20 @@ services:
       - ./router/templates:/etc/nginx/templates
 
   db:
-    # postgres 11 so that the debian buster postgresql-client is fully compatible.
-    # (Simpler than hooking into the postgresql project Debian archives, which we would
-    # do if we needed any postgres 12+ features.)
-    image: postgres:11-alpine
+    # postgres 13 so that the debian bullseye postgresql-client is fully compatible.
+    image: postgres:13-alpine
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-    volumes: 
+    volumes:
       - pgdata:/var/lib/postgresql/data
 
   app:
-    build: .
+    build:
+      context: .
+      target: develop
     depends_on:
       - db
     environment:
