--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,29 @@
-aiofiles==0.6.0
-alembic==1.4.3
-appdirs==1.4.4
-asyncpg==0.21.0
-attrs==22.1.0
-backcall==0.2.0
-black==20.8b1
+aiofiles==22.1.0
+alembic==1.8.1
+anyio==3.6.1
+asyncpg==0.26.0
 certifi==2022.9.24
-chardet==3.0.4
-click==7.1.2
-coverage==6.5.0
-databases==0.4.1
-decorator==5.1.1
-flake8==3.8.4
-gunicorn==20.0.4
+charset-normalizer==2.1.1
+click==8.1.3
+databases==0.4.3
+gunicorn==20.1.0
 h11==0.14.0
-httptools==0.1.1
-idna==2.10
-iniconfig==1.1.1
-ipython==7.19.0
-isort==5.6.4
-jedi==0.18.1
-Jinja2==2.11.2
+httptools==0.5.0
+idna==3.4
+importlib-metadata==5.0.0
+importlib-resources==5.9.0
+Jinja2==2.11.3
 Mako==1.2.3
 MarkupSafe==2.0.1
-mccabe==0.6.1
-mypy-extensions==0.4.3
-orjson==3.4.3
-packaging==21.3
-parso==0.8.3
-pathspec==0.10.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pluggy==0.13.1
-prompt-toolkit==3.0.31
-psycopg2-binary==2.8.6
-ptyprocess==0.7.0
-py==1.11.0
-pycodestyle==2.6.0
-pydantic==1.7.2
-pyflakes==2.2.0
-Pygments==2.13.0
-pyparsing==3.0.9
-pytest==6.1.2
-pytest-cov==2.10.1
-python-dateutil==2.8.2
-python-editor==1.0.4
-regex==2022.9.13
-requests==2.25.0
-six==1.16.0
-SQLAlchemy==1.3.20
-starlette==0.14.1
-toml==0.10.2
-traitlets==5.4.0
-typed-ast==1.5.4
+orjson==3.8.0
+psycopg2-binary==2.9.3
+pydantic==1.10.2
+requests==2.28.1
+sniffio==1.3.0
+SQLAlchemy==1.3.24
+starlette==0.21.0
 typing_extensions==4.3.0
 urllib3==1.26.12
-uvicorn==0.12.2
-uvloop==0.14.0
-wcwidth==0.2.5
+uvicorn==0.18.3
+uvloop==0.17.0
+zipp==3.8.1
